back on track. Photos added and text updated.

--- a/assets/css/andrew.css
+++ b/assets/css/andrew.css
@@ -107,8 +107,9 @@ input, select, textarea {
 
   p{
     font-size: 1rem;
-    
+    margin-bottom: 1rem;
   }
+
   .content{
     display: flex;
     justify-content: center;
@@ -127,4 +128,9 @@ input, select, textarea {
   h2{
     font-size: 2rem;
 
+  }
+
+.quotes{
+    display: flex;
+    text-align:center;
   }
